--- a/staff.css
+++ b/staff.css
@@ -9,6 +9,23 @@
     box-sizing: border-box;
 }
 
+/* Custom scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 /* Basic styling */
 body {
     font-family: 'Roboto', sans-serif;
@@ -56,6 +73,7 @@ header nav ul {
 
 header nav ul li {
     margin: 0 15px;
+    position: relative;
 }
 
 header nav ul li a {
@@ -69,6 +87,31 @@ header nav ul li a:hover {
     background-color: #eee;
     color: #333;
     box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.3);
+}
+
+header nav ul .dropdown {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 100%;
+    left: 0;
+    min-width: 200px;
+    padding: 10px 0;
+}
+
+header nav ul li:hover .dropdown {
+    display: block;
+}
+
+header nav ul .dropdown li {
+    margin: 0;
+}
+
+header nav ul .dropdown li a {
+    padding: 10px;
+    display: block;
 }
 
 .hamburger {
@@ -100,6 +143,14 @@ header nav ul li a:hover {
 
 .nav-active li {
     margin: 10px 0;
+}
+
+.nav-active .dropdown {
+    display: none;
+}
+
+.nav-active .services-dropdown:hover .dropdown {
+    display: block;
 }
 
 .toggle .hamburger div:nth-child(1) {
@@ -264,14 +315,60 @@ a:active {
     .hamburger {
         display: flex;
     }
+
+    .logo {
+        margin: 0 auto;
+    }
+
+    .service-description h1 {
+        font-size: 1.6em;
+    }
+
+    .service-description p {
+        font-size: 1em;
+    }
+
+    .contact h2 {
+        font-size: 2em;
+    }
+
+    .banner {
+        padding-top: 60px;
+    }
+
+    .nav-active .dropdown {
+        display: none;
+    }
+
+    .nav-active .services-dropdown:hover .dropdown {
+        display: block;
+        position: static;
+        box-shadow: none;
+    }
 }
 
 @media (max-width: 480px) {
     .logo img {
-        max-width: 150px; 
+        max-width: 150px;
     }
 
     header .logo {
-        font-size: 1em; 
+        font-size: 1em;
+    }
+
+    .service-description h1 {
+        font-size: 1.4em;
+    }
+
+    .service-description p {
+        font-size: 0.9em;
+    }
+
+    .contact h2 {
+        font-size: 1.8em;
+    }
+
+    .banner {
+        padding-top: 50px;
     }
 }
